--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -300,23 +300,6 @@
             <div class="wp-faq-schema-wrap wp-faq-schema- ">
               <h2>Sports Betting Software FAQs</h2>
               <div class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset" role="tablist">
-                <!-- <h3
-  class="ui-accordion-header ui-corner-top ui-state-default ui-accordion-header-active ui-state-active ui-accordion-icons"
-  role="tab" id="ui-id-1" aria-controls="ui-id-2" [attr.aria-selected]="accordian" [attr.aria-expanded]="accordian"
-  tabindex="0">
-  <span (click)="toggleAccordion()" class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>
-  Can I operate a sportsbook in any territory?
-</h3>
-<div [hidden]="!accordian"
-  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content ui-accordion-content-active"
-  style="" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" [attr.aria-hidden]="!accordian">
-  <p>
-    The sports betting market is regulated by the Countries, States or Provinces. Each territory has its own rules and
-    Authorities, in some countries the sports betting is still not regulated or illegal. So, before starting building
-    up a betting platform, it is important to get informed and apply for a license, whether needed.
-  </p>
-</div> -->
-
                 <div class="accordion-item">
 
                   <h3
@@ -339,26 +322,141 @@
                     </div>
                   </div>
                 </div>
+<div class="accordion-item">
+<h3
+    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+    data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo" 
+    ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>  Can I manage
+    both the online and retail operations?
+  </h3>
+  <div id="collapsetwo"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
+   >
+   <div class="accordion-body">
 
-
-                <!-- <div class="accordion-item">
-
+    <p>  Managing online players and betting shops is possible through our backend. Indeed, the backoffice
+      counts with many reports and features that allow to have a complete reporting of the activities
+      carried out by Players and Agents, online and in real time</p>
+   </div>
+  </div>
+</div>
+<div class="accordion-item">
     <h3
+        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+        data-bs-toggle="collapse" data-bs-target="#collapseten" aria-expanded="false" aria-controls="collapseten" 
+        ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>  What products do you offer?
+      </h3>
+      <div id="collapseten"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
+       >
+       <div class="accordion-body">
+    
+        <p> Our core business is the Sports Betting, in fact our sports betting software is an in-house product and it has been developed by our IT team since 2005. In addition to the Sport product we also offer live betting, casino, live casino, lotteries and virtual games so as to offer "all in one" solutions to our customers.</p>
+       </div>
+      </div>
+</div>
+<div class="accordion-item">
+  <h3
       class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-      data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo" 
-      ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>  Can I manage
-      both the online and retail operations?
+      data-bs-toggle="collapse" data-bs-target="#collapseeleven" aria-expanded="false" aria-controls="collapseeleven" 
+      ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do you have the Mobile version?
     </h3>
-    <div id="collapsetwo"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
+    <div id="collapseeleven"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
      >
      <div class="accordion-body">
   
-      <p>  Managing online players and betting shops is possible through our backend. Indeed, the backoffice
-        counts with many reports and features that allow to have a complete reporting of the activities
-        carried out by Players and Agents, online and in real time</p>
+      <p>The gaming platform is responsive, so it suits all the mobile devices. Players can bet, deposit, view the bets list and carry out many different operations sailing the platform from their mobile devices. Furthermore, we have our Application for Android.</p>
      </div>
     </div>
-    </div> -->
+</div>              
+<div class="accordion-item">
+
+  <h3
+    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+    data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+    aria-controls="collapseThree"><span
+      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do you have
+    the cashout feature?</h3>
+  <div id="collapseThree"
+    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
+    <div class="accordion-body">
+
+      <p>Yes, we have the cashout. It is possible to define a minimum number of events in the ticket to
+        activate the cashout. With one event still in progress in the ticket, the players can cash out a
+        percentage of the winning generated by the events set as won.</p>
+    </div>
+  </div>
+</div>
+<div class="accordion-item">
+
+  <h3
+    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+    data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false"
+    aria-controls="collapsefour"><span
+      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do you offer
+    affiliate systems?</h3>
+  <div id="collapsefour"
+    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
+    <div class="accordion-body">
+
+      <p>
+        Yes, indeed our software network is based on 5 levels:<br>
+        Platform administrator - the access to the backend (it is also possible to create other accesses
+        to
+        the Back office with limited privileges and permissions).<br>
+        Reseller - a master-agent supervising several betting shops. Earning commissions on shop’s
+        turnover
+        or profits.<br>
+        Betting shop - it represents the physical point where players can play, deposit, etc. Through
+        this
+        account it is possible to place bets and earn commission on turnover or profits.<br>
+        Cashier, the profile for the betting shops's employees, able to place bets without earning any
+        commissions.<br>
+        Online player, register your game account online or at a shop, place bets.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="accordion-item">
+
+  <h3
+    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+    data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false"
+    aria-controls="collapsefive"><span
+      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do Can I add
+    some features, reports and pages to the sports betting software?</h3>
+  <div id="collapsefive"
+    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
+    <div class="accordion-body">
+
+      <p>
+        The betting software includes a wide range of reports, pages and banners that can be customized
+        (CMS) or developed upon request. If you would like us to develop a new feature, we will work
+        alongside you creating a tailored project: collection of information and details, submission of
+        the
+        project/rendering, testing and final release.
+      </p>
+    </div>
+  </div>
+</div>   
+<div class="accordion-item">
+
+  <h3
+    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+    data-bs-toggle="collapse" data-bs-target="#collapsetwele" aria-expanded="false" aria-controls="collapsetwele" 
+    ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Can I offer
+    the sports betting services in the casinos I have in my country?</h3>
+  <div id="collapsetwele"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
+   >
+   <div class="accordion-body">
+
+    <p>
+      We have several betting solutions for both the online and land-based businesses. If you own a
+land-based casino and you would like to offer sports betting as well, our retail solution will be
+the right choice since it will allow to create cashiers accounts to manage the sports betting
+tickets sale.
+    </p>
+   </div>
+  </div>
+</div>
 
 
 
@@ -366,79 +464,11 @@
 
 
 
+               
 
-                <div class="accordion-item">
+                
 
-                  <h3
-                    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-                    data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                    aria-controls="collapseThree"><span
-                      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do you have
-                    the cashout feature?</h3>
-                  <div id="collapseThree"
-                    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
-                    <div class="accordion-body">
-
-                      <p>Yes, we have the cashout. It is possible to define a minimum number of events in the ticket to
-                        activate the cashout. With one event still in progress in the ticket, the players can cash out a
-                        percentage of the winning generated by the events set as won.</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-
-                  <h3
-                    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-                    data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false"
-                    aria-controls="collapsefour"><span
-                      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do you offer
-                    affiliate systems?</h3>
-                  <div id="collapsefour"
-                    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
-                    <div class="accordion-body">
-
-                      <p>
-                        Yes, indeed our software network is based on 5 levels:<br>
-                        Platform administrator - the access to the backend (it is also possible to create other accesses
-                        to
-                        the Back office with limited privileges and permissions).<br>
-                        Reseller - a master-agent supervising several betting shops. Earning commissions on shop’s
-                        turnover
-                        or profits.<br>
-                        Betting shop - it represents the physical point where players can play, deposit, etc. Through
-                        this
-                        account it is possible to place bets and earn commission on turnover or profits.<br>
-                        Cashier, the profile for the betting shops's employees, able to place bets without earning any
-                        commissions.<br>
-                        Online player, register your game account online or at a shop, place bets.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-
-                  <h3
-                    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-                    data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false"
-                    aria-controls="collapsefive"><span
-                      class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Do Can I add
-                    some features, reports and pages to the sports betting software?</h3>
-                  <div id="collapsefive"
-                    class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse">
-                    <div class="accordion-body">
-
-                      <p>
-                        The betting software includes a wide range of reports, pages and banners that can be customized
-                        (CMS) or developed upon request. If you would like us to develop a new feature, we will work
-                        alongside you creating a tailored project: collection of information and details, submission of
-                        the
-                        project/rendering, testing and final release.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+               
 
                 <!-- <div class="accordion-item">
 
@@ -460,27 +490,8 @@
                       </div>
                       </div> -->
 
-                <!-- <div class="accordion-item">
-
-                        <h3
-                          class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-                          data-bs-toggle="collapse" data-bs-target="#collapseseven" aria-expanded="false" aria-controls="collapseseven" 
-                          ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Can I offer
-                          the sports betting services in the casinos I have in my country?</h3>
-                        <div id="collapseseven"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
-                         >
-                         <div class="accordion-body">
-        
-                          <p>
-                            We have several betting solutions for both the online and land-based businesses. If you own a
-                    land-based casino and you would like to offer sports betting as well, our retail solution will be
-                    the right choice since it will allow to create cashiers accounts to manage the sports betting
-                    tickets sale.
-                          </p>
-                         </div>
-                        </div>
-                        </div> -->
-
+              
+ 
 
 
 
