--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -193,7 +193,7 @@
     </div>
   </section>
 
-  <section class="Web3_sec">
+  <!-- <section class="Web3_sec">
     <div class="web3_row">
       <div class="web3_col">
         <h1 class="web3_header">Web3 sportsbook</h1>
@@ -264,7 +264,7 @@
         />
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="integration_sec">
     <div class="integration_row">
