--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -322,23 +322,7 @@
                     </div>
                   </div>
                 </div>
-<div class="accordion-item">
-<h3
-    class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
-    data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo" 
-    ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>  Can I manage
-    both the online and retail operations?
-  </h3>
-  <div id="collapsetwo"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
-   >
-   <div class="accordion-body">
-
-    <p>  Managing online players and betting shops is possible through our backend. Indeed, the backoffice
-      counts with many reports and features that allow to have a complete reporting of the activities
-      carried out by Players and Agents, online and in real time</p>
-   </div>
-  </div>
-</div>
+  
 <div class="accordion-item">
     <h3
         class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
@@ -437,27 +421,36 @@
     </div>
   </div>
 </div>   
-<div class="accordion-item">
+ <div class="accordion-item">
 
   <h3
     class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
     data-bs-toggle="collapse" data-bs-target="#collapsetwele" aria-expanded="false" aria-controls="collapsetwele" 
-    ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Can I offer
-    the sports betting services in the casinos I have in my country?</h3>
+    ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>Can I run a sportsbook without dealing with the odds and trading management?</h3>
   <div id="collapsetwele"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
    >
    <div class="accordion-body">
 
     <p>
-      We have several betting solutions for both the online and land-based businesses. If you own a
-land-based casino and you would like to offer sports betting as well, our retail solution will be
-the right choice since it will allow to create cashiers accounts to manage the sports betting
-tickets sale.
+      Our betting solutions come with the odds feed included. The software embeds many features and tools to manage the odds margins and configurations in complete autonomy. If you want to focus on the shops and players management only, we provide trading services and support.
     </p>
    </div>
   </div>
-</div>
-
+</div> 
+<!-- <div class="accordion-item">
+  <h3
+      class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons  collapsed"
+      data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo" 
+      ><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span> Can I use my logo and brand colors?
+    </h3>
+    <div id="collapsetwo"  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content  accordion-collapse collapse"
+     >
+     <div class="accordion-body">
+  
+      <p>  Yes you can. We provide different solutions based on your specific requirements. Indeed, we can create bespoke solutions collecting your requests and setting up a project for you or we can provide a turnkey solution, modifying your brand colors and logo only.</p>
+     </div>
+    </div>
+  </div> -->
 
 
 
