--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -107,7 +107,7 @@
           <br />products.
         </p>
         <p class="casino_whites_sec_p">
-          In order to speed up your business, we offer White Label Casino with
+          In order to speed up your business, we offer <span style="color: #a0c528;">White Label Casino</span> with
           more than 30,000 games.
         </p>
 
@@ -199,6 +199,13 @@
         <img class="integration_images" src="assets/sirplay vrnl 12.webp" />
       </div>
     </div>
+    <div class="seprator" style="
+            height: 4px;
+            width: 60px;
+            border-radius: 5px;
+            background: #a0c528;
+            margin-top: 30px;
+          "></div>
   </section>
 
   <!-- =============================================================== -->
