--- a/src/app/casino-games/casino-games.component.css
+++ b/src/app/casino-games/casino-games.component.css
@@ -61,8 +61,8 @@ font-size: calc(285.7%);
 
 .left-text-index3 h2{
     color: #a0c528;
-    font-size: 50px;
-    font-family: 'Raleway', sans-serif;
+    font-size: 45px;
+    font-family: 'Raleway', sans-serif ;
     margin-right: calc(-1.999em * -1);
     line-height: 1.3;
 }
@@ -174,7 +174,8 @@ margin-left: 100px;
     padding: 0px 10px;
     line-height: 2.4;
     color: #272727;
-}
+    font-family: "Raleway",sans-serif !important;
+  }
 
 
 
@@ -3201,4 +3202,95 @@ whites_param {
 .container_10_img{
   width: 613px;
   height: 471px ;
+}
+
+
+
+
+.m6y-1g {
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  border-top-width: 8px;
+  border-right-width: 8px;
+  border-bottom-width: 8px;
+  border-left-width: 8px;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-bottom-style: solid;
+  border-left-style: solid;
+  border-top-color: rgb(230,230,230);
+  border-right-color: rgb(230,230,230);
+  border-bottom-color: rgb(230,230,230);
+  border-left-color: rgb(230,230,230);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding-top: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  font-size: 1em;
+}
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+}
+.x-quote-content {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
+}
+.m6y-1g .x-quote-text {
+  font-family: "Raleway",sans-serif;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.4;
+  text-align: center;
+  color: rgba(0,0,0,1);
+}
+.x-quote-text :last-child {
+  margin-bottom: 0;
+}
+.x-quote-text :first-child {
+  margin-top: 0;
+}
+table {
+  border-collapse: collapse;
+}
+table {
+  width: 100%;
+  margin-bottom: 1.5em;
+  border-spacing: 0;
+  background-color: transparent;
+}
+.x-quote-text :first-child {
+  margin-top: 0;
+}
+.x-quote-text :last-child {
+  margin-bottom: 0;
+}
+tr {
+  display: table-row;
+  vertical-align: inherit;
+  border-color: inherit;
+  
+}
+table th, table td {
+  border-top: 1px solid #f2f2f2;
+}
+
+table td {
+  line-height: 1.4;
+}
+table th, table td {
+  padding: 0.5em 0.625em;
+  line-height: 1.3;
+  text-align: left;
+  vertical-align: middle;
+}
+*, *:before, *:after {
+  box-sizing: border-box;
 }
