--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -90,7 +90,7 @@
       
 
 
-      <div class="company_about">
+      <div class="company_about com">
         <h4 class="comp_header">Company</h4>
         <div><p class="comp_list"><a href="/about-us" target="_blank">About Us</a></p></div>
         <div><p class="comp_list"><a href="/online-sportsbook-software" target="_blank">sportsbook Provider</a></p></div>
