--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -69,6 +69,10 @@ margin-left: -11px;
 
     }
     
+    
+.com {
+    margin-left: 7px !important;
+}
 
 }
 
@@ -108,4 +112,5 @@ color: #a0c528;
 .company_about a{
 text-decoration: none;
 }
+
 /* =======================<foooter sec end>=======================  */
