--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -46,7 +46,7 @@
                 <p><span style="font-weight: 400;">Video poker</span></p>
                 </td>
                 <td>
-                <p><span style="font-weight: 400;">More than </span><span style="font-weight: 400;">de 3</span><span style="font-weight: 400;">25</span></p>
+                <p><span style="font-weight: 400;">More than </span><span style="font-weight: 400;     font-family: 'Raleway', sans-serif;">de 3</span><span style="font-weight: 400;">25</span></p>
                 </td>
                 </tr>
                 <tr>
