--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -316,3 +316,8 @@ p{
         font-size: 22px;
     }
 }
+@media screen and (width: 1024px) and (height: 600px) {
+    .containt {
+        width: 1010px;
+    }
+}
