--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -112,5 +112,13 @@ color: #a0c528;
 .company_about a{
 text-decoration: none;
 }
-
+@media (max-width: 768px){
+    .comp_row{
+        flex-direction: row;
+    }
+    .com {
+        margin-left: 0px  !important;
+        margin-top: 31px;
+}
+}
 /* =======================<foooter sec end>=======================  */
